--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-click==8.1.3
+click==8.0.4
 colorama==0.4.4
-Flask==2.1.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
+Flask==2.0.3
+gunicorn==21.2.0
+itsdangerous==2.1.1
+Jinja2==3.0.3
 MarkupSafe==2.1.1
 mpmath==1.2.1
-numpy==1.22.4
-pandas==1.4.2
+numpy==1.21.6
+pandas==1.3.5
 python-dateutil==2.8.2
 pytz==2022.1
 six==1.16.0
 sympy==1.10.1
-Werkzeug==2.1.2
+Werkzeug==2.0.3
